tried fix dark mode on mobile

--- a/main.css
+++ b/main.css
@@ -168,6 +168,7 @@ input:checked+.slider:before {
   border: 1px solid rgba(255, 255, 255, 0.18);
   font-size: 50px;
   height: 750px;
+  padding-top: 50px; 
   resize: both;
   overflow: auto;
   margin-bottom: 50px;
